apps/system/authentik/overlays/system/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: authentik-server
  name: authentik
  namespace: authentik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`key.anotherlife.org.pl`)
    services:
    - kind: TraefikService
      name: authentik-server
      port: 443
  tls:
    domains:
    - main: anotherlife.org.pl
      sans:
      - .anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-production
